2009-12-07  Ivan Maidanski <ivmai@mail.ru> (really Emmanuel Stapf)

	* src/atomic_ops.h: Recognize _M_X64 (as an alias for _AMD64_).

2009-12-04  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 7.2alpha5.
	* configure: Regenerate.

[7.2alpha4]

2009-12-02  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 7.2alpha4.
	* configure: Regenerate.

2009-12-01  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 1.3alpha1.
	* configure: Regenerate.

2009-11-21  Ivan Maidanski <ivmai@mail.ru> (really Daniel R. Grayson)

	* configure.ac (AC_CONFIG_COMMANDS): Quote PICFLAG, CC, DEFS
	values.
	* configure: Regenerate.

2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/sh.h: Remove commented out AO_TS_SET
	redefinition.

2009-10-05  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/Makefile.in: Regenerate.

2009-10-05  Ivan Maidanski <ivmai@mail.ru> (really Takashi YOSHII)

	* src/atomic_ops/sysdeps/gcc/sh.h: New file.
	* src/atomic_ops.h: Include gcc/sh.h if __arm__.
	* src/atomic_ops/sysdeps/Makefile.am: Add gcc/sh.h entry.

2009-10-02  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/Makefile.am: Add armcc/arm_v6.h,
	msftc/arm.h, msftc/common32_defs.h, sunc/x86.h sunc/x86_64.h
	entries; order all entries alphabetically.
	* src/atomic_ops/sysdeps/Makefile.in: Regenerate.

2009-10-01  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using libtool-2.2,
	automake-1.10.2, autoconf-2.64).
	* INSTALL: Ditto.
	* Makefile.in: Ditto.
	* aclocal.m4: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.
	* doc/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/atomic_ops/Makefile.in: Ditto.
	* src/atomic_ops/sysdeps/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.

2009-10-01  Ivan Maidanski <ivmai@mail.ru>
